Security: Remove hardcoded OAuth2 credentials and add environment configuration
- Remove exposed Google Client ID and Client Secret from application.properties
- Remove hardcoded secrets from OAuth2_Flow_Diagram.md
- Add .env.example with setup instructions
- Update README.md with environment configuration guide
- Add environment files to .gitignore
- Implement secure environment variable configuration

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,12 @@ build/
 
 ### VS Code ###
 .vscode/
+
+### Environment Variables ###
+.env
+.env.local
+.env.production
+.env.staging
+
+### OAuth2 & Secrets ###
+application-secrets.properties
