--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,15 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+# Environment Variables
+.env
+.env.local
+.env.development
+.env.production
+
+# Scripts with secrets (create your own local copy)
+start-backend-with-env.sh
+
 ### STS ###
 .apt_generated
 .classpath
